# CARLA-ConstrastiveTS

./: .gitignore  Evaluation.ipynb  Evaluation_toolkit.ipynb  Evaluation_toolkit.py  carla_classification.py  carla_pretext.py  plot_feature_map.py  pyproject.toml  tsne_pretext.py
configs/classification/: carla_classification_smd.yml  carla_classification_sre.yml
configs/pretext/: carla_pretext_msl.yml  carla_pretext_sre.yml
data/: MSL.py  augment.py  custom_dataset.py  sre_kpi.py
models/: resent_time.py
utils/: collate.py  common_config.py  config.py  evaluate_utils.py  mypath.py  repository.py  utils.py
