[project]
name = "carla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "arch>=7.2.0",
    "easydict>=1.13",
    "faiss-cpu~=1.8.0",
    "hurst>=0.0.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib~=3.5",
    "mlflow>=3.1.0",
    "nbconvert>=7.16.6",
    "notebook>=7.4.3",
    "numpy~=1.22.4",
    "pandas>=1.5.1",
    "polars>=1.30.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "termcolor>=3.1.0",
    "torch~=1.13",
    "torchaudio~=0.13.1",
    "torchvision~=0.14.1",
    "tsfresh>=0.20.2",
    "webdataset>=0.2.111",
]
  
[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true 
  
[tool.uv.sources]
torch = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]  
